logs/link.mongo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/b3j0f'...
Listing './lib/python3.5/site-packages/b3j0f/annotation'...
Listing './lib/python3.5/site-packages/b3j0f/annotation/test'...
Listing './lib/python3.5/site-packages/b3j0f/aop'...
Listing './lib/python3.5/site-packages/b3j0f/aop/advice'...
Listing './lib/python3.5/site-packages/b3j0f/aop/advice/test'...
Listing './lib/python3.5/site-packages/b3j0f/aop/joinpoint'...
Listing './lib/python3.5/site-packages/b3j0f/aop/joinpoint/test'...
Listing './lib/python3.5/site-packages/b3j0f/aop/test'...
Listing './lib/python3.5/site-packages/b3j0f/conf'...
Listing './lib/python3.5/site-packages/b3j0f/conf/configurable'...
Listing './lib/python3.5/site-packages/b3j0f/conf/configurable/test'...
Listing './lib/python3.5/site-packages/b3j0f/conf/data'...
Listing './lib/python3.5/site-packages/b3j0f/conf/driver'...
Listing './lib/python3.5/site-packages/b3j0f/conf/driver/file'...
Listing './lib/python3.5/site-packages/b3j0f/conf/driver/file/test'...
Listing './lib/python3.5/site-packages/b3j0f/conf/driver/test'...
Listing './lib/python3.5/site-packages/b3j0f/conf/model'...
Listing './lib/python3.5/site-packages/b3j0f/conf/model/test'...
Listing './lib/python3.5/site-packages/b3j0f/conf/parser'...
Listing './lib/python3.5/site-packages/b3j0f/conf/parser/resolver'...
Listing './lib/python3.5/site-packages/b3j0f/conf/parser/resolver/lang'...
Listing './lib/python3.5/site-packages/b3j0f/conf/parser/resolver/lang/test'...
Listing './lib/python3.5/site-packages/b3j0f/conf/parser/resolver/test'...
Listing './lib/python3.5/site-packages/b3j0f/conf/parser/test'...
Listing './lib/python3.5/site-packages/b3j0f/task'...
Listing './lib/python3.5/site-packages/b3j0f/task/test'...
Listing './lib/python3.5/site-packages/b3j0f/utils'...
Listing './lib/python3.5/site-packages/b3j0f/utils/test'...
Listing './lib/python3.5/site-packages/b3j0f.annotation-0.3.6.dist-info'...
Listing './lib/python3.5/site-packages/b3j0f.aop-0.8.4.dist-info'...
Listing './lib/python3.5/site-packages/b3j0f.conf-0.3.22.dist-info'...
Listing './lib/python3.5/site-packages/b3j0f.task-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/b3j0f.utils-1.4.4.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/dateutils'...
Compiling './lib/python3.5/site-packages/dateutils/dateadd.py'...
***   File "./lib/python3.5/site-packages/dateutils/dateadd.py", line 56
    print dt.strftime(args.format)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutils/datediff.py'...
***   File "./lib/python3.5/site-packages/dateutils/datediff.py", line 40
    print __import__(args.unit)(end_dt, start_dt, **kwargs)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutils-0.6.6.egg-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/link'...
Listing './lib/python3.5/site-packages/link/dbrequest'...
Listing './lib/python3.5/site-packages/link/dbrequest/test'...
Listing './lib/python3.5/site-packages/link/feature'...
Listing './lib/python3.5/site-packages/link/feature/test'...
Listing './lib/python3.5/site-packages/link/middleware'...
Listing './lib/python3.5/site-packages/link/middleware/test'...
Listing './lib/python3.5/site-packages/link/mongo'...
Listing './lib/python3.5/site-packages/link/mongo/ast'...
Listing './lib/python3.5/site-packages/link.dbrequest-0.19.dist-info'...
Listing './lib/python3.5/site-packages/link.feature-2.1.dist-info'...
Listing './lib/python3.5/site-packages/link.middleware-1.5.dist-info'...
Listing './lib/python3.5/site-packages/link.mongo-0.10.dist-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ordereddict-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
